[tool.poetry]
name = "mars_rover"
version = "0.1.0"
description = ""
authors = ["Daniel Schruhl <daniel.schruhl@hellofresh.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
