[tool.poetry]
name = "mars_rover"
version = "0.1.0"
description = ""
authors = ["Daniel Schruhl <daniel.schruhl@hellofresh.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.13"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
